appserver/java-spring/static/app/styles/style.css
/* ... */
.ss-account-dropdown .ss-account-info {
  padding: 14px 18px 14px 18px; }
.ss-account-dropdown .ss-account-info h4 {
  padding-bottom: 2px;
  color: #000; }
.ss-account-dropdown .ss-account-info p {
  font-size: 12px; }
.ss-account-dropdown .ss-account-actions {
  border-top: 1px solid #ddd;
  padding: 6px 16px 10px;
  padding-bottom: 6px;
  text-align: right;
  margin-bottom: 0 !important; }
.ss-account-dropdown .ss-account-actions a.btn-primary {
  background-color: #428bca;
  border-color: #357ebd;
  display: inline-block !important;
  font-size: 13px;
  padding: 3px 10px; }
.ss-account-dropdown .ss-account-actions a.btn-primary:hover {
  background-color: #428bca;
  border-color: #357ebd; }

.ss-account-dropdown:hover, .ss-account-dropdown.open {
  background: #333; }

.ss-account-dropdown.open a.dropdown-toggle, .ss-account-dropdown a:hover {
  background: #333 !important;
  color: #fff; }

.ss-search-bar {
  /* search */
  /* search tips button */
  /* search tips box */
  /* entire first column */
  /* first label */
  /* first sample */
  /* entire column default */
  /* label default */
  /* sample default */
  /* entire last column */
  /* last label */
  /* last sample */ }
  .ss-search-bar .search-wrapper {
    margin-top: 50px;
    background: #22224f;
    /* Old browsers */
    background: -moz-linear-gradient(left, #22224f 0%, #4668a9 43%, #4668a9 58%, #222350 100%);
    /* FF3.6+ */
    background: -webkit-gradient(linear, left top, right top, color-stop(0%, #22224f), color-stop(43%, #4668a9), color-stop(58%, #4668a9), color-stop(100%, #222350));
    /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(left, #22224f 0%, #4668a9 43%, #4668a9 58%, #222350 100%);
    /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(left, #22224f 0%, #4668a9 43%, #4668a9 58%, #222350 100%);
    /* Opera 11.10+ */
    background: -ms-linear-gradient(left, #22224f 0%, #4668a9 43%, #4668a9 58%, #222350 100%);
    /* IE10+ */
    background: linear-gradient(to right, #22224f 0%, #4668a9 43%, #4668a9 58%, #222350 100%);
    /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#22224f', endColorstr='#222350',GradientType=1 );
    /* IE6-9 */
    padding-top: 30px;
    padding-bottom: 30px;
    padding-left: 20px;
    padding-right: 20px; }
  .ss-search-bar .search-inner .search-input-wrapper {
    float: left;
    width: 70%;
    background: #fff;
    border-radius: 6px;
    margin-left: 32px; }
  .ss-search-bar .search-inner input[type="text"], .ss-search-bar .search-inner input[type="search"] {
    border-radius: 6px;
    -webkit-border-top-right-radius: 0px !important;
    -webkit-border-bottom-right-radius: 0px !important;
    -moz-border-radius-topright: 0px !important;
    -moz-border-radius-bottomright: 0px !important;
    border-top-right-radius: 0px !important;
    border-bottom-right-radius: 0px !important;
    border: none;
    width: 80%;
    float: left; }
  .ss-search-bar .search-inner input[type="text"], .ss-search-bar .search-inner input[type="search"] {
    box-shadow: inset 0 0px 0px, 0 0 0px; }
  .ss-search-bar .search-inner .search-clear {
    float: right;
    font-size: 18px;
    color: #ccc;
    padding: 12px 12px 0 12px;
    cursor: pointer; }
  .ss-search-bar .search-inner .glyphicon-search {
    margin-right: 10px; }
  .ss-search-bar .search-inner button.search-button {
    -webkit-border-top-left-radius: 0px !important;
    -webkit-border-bottom-left-radius: 0px !important;
    -moz-border-radius-topleft: 0px !important;
    -moz-border-radius-bottomleft: 0px !important;
    border-top-left-radius: 0px !important;
    border-bottom-left-radius: 0px !important;
    float: right;
    padding: 11px 18px 10px 16px; }
  @media (max-width: 970px) {
    .ss-search-bar .search-inner .glyphicon-search {
      margin: 0; }
    .ss-search-bar .search-inner input[type="search"], .ss-search-bar .search-inner input[type="text"] {
      width: 50%; } }
  .ss-search-bar .search-tips-wrapper {
    float: right; }
  .ss-search-bar .search-tips-wrapper button {
    background: none;
    padding-top: 11px;
    padding-bottom: 10px;
    margin-top: 1px;
    margin-bottom: 1px;
    margin-left: 0px;
    margin-right: 32px;
    border: 1px solid #a5aec7;
    position: static !important;
    margin-top: 2px; }
  .ss-search-bar .search-tips-wrapper button.search-tips:hover, .ss-search-bar .search-tips-wrapper button.search-tips.down {
    background: #22224f; }
  .ss-search-bar .search-tips-wrapper button.search-tips {
    position: absolute; }
  .ss-search-bar .search-tips-wrapper button.search-tips i.icon-pointer-down {
    margin-left: -2px;
    margin-right: 14px;
    position: relative; }
  .ss-search-bar .search-tips-wrapper button.search-tips i.icon-pointer-up {
    margin-left: -2px;
    margin-right: 14px;
    position: relative; }
  @media (max-width: 970px) {
    .ss-search-bar .search-tips-wrapper button.search-tips {
      margin: 0; }
    .ss-search-bar .search-tips-wrapper button.search-tips span.glyphicon-chevron-up, .ss-search-bar .search-tips-wrapper button.search-tips span.glyphicon-chevron-down {
      margin: 0px; } }
  .ss-search-bar .tips-box {
    color: #ccc;
    background: #333;
    padding: 12px;
    box-shadow: inset 0px 0px 10px 0px #000, 0px 3px 3px 0px #333;
    -webkit-box-shadow: inset 0px 0px 10px 0px #000, 0px 3px 3px -4px #333;
    -moz-box-shadow: inset 0px 0px 10px 0px #000, 0px 3px 3px 0px #333;
    -o-box-shadow: inset 0px 0px 10px 0px #000, 0px 3px 3px 0px #333; }
  .ss-search-bar .tips-box .col:first-of-type {
    border: 0;
    width: 27%; }
  .ss-search-bar .tips-box .col:first-of-type label {
    width: 45.5%; }
  .ss-search-bar .tips-box .col:first-of-type .sample {
    width: 54.5%; }
/* ... */

